Whole day of troubleshooting of the Jaccard Similarity - interim  commit
