# ncats/translator/ontology/server/openapi_server/controllers/controller_impl.py
@@ -4,7 +4,13 @@ from uuid import uuid4
 
 from typing import Dict, Tuple, Any
 
-from ncats.translator.ontology.server.openapi_server.exceptions import OntologyServerException
+from ncats.translator.ontology.server.openapi_server.exceptions import (
+    OntologyServerException,
+    JaccardSimilarityPending,
+    JaccardSimilarityResultNotFound,
+    JaccardSimilarityComputationError
+)
+
 from ncats.translator.ontology.server.openapi_server.model.computation_identifier import ComputationIdentifier
 from ncats.translator.ontology.server.openapi_server.model.computation_input import ComputationInput
 from ncats.translator.ontology.server.openapi_server.model.results import Results
@@ -22,9 +28,6 @@ from .controller_impl import (
     handle_get_jaccard_results,
 )
 """
-_ontology = {}
-
-_result_cache = {}
 
 
 def handle_compute_jaccard(computation_input: ComputationInput) -> Tuple[ComputationIdentifier, int]:
@@ -42,12 +45,8 @@ def handle_compute_jaccard(computation_input: ComputationInput) -> Tuple[Computa
         # Initiate a Jaccard Similarity computation here
 
         ontology = computation_input.ontology
-        if ontology not in ['go', 'hp', 'mp']:
-            raise OntologyServerException("compute_jaccard() ERROR: ontology '"+ontology+"' not recognized.")
 
         taxon = computation_input.taxon
-        if taxon not in ['human', 'mouse']:
-            raise OntologyServerException("compute_jaccard() ERROR: taxon '"+taxon+"' not recognized.")
 
         input_genes = computation_input.input_genes
         if not input_genes:
@@ -57,17 +56,11 @@ def handle_compute_jaccard(computation_input: ComputationInput) -> Tuple[Computa
         if not lower_bound:
             lower_bound = 0.7
 
-        if ontology not in _ontology:
-            _ontology[ontology] = {}
-
-        if taxon not in _ontology[ontology]:
-            _ontology[ontology][taxon] = GenericSimilarity(ontology, taxon)
-
-        similarity_engine = _ontology[ontology][taxon]
-
         uuid = str(uuid4())
 
-        _result_cache[uuid] = asyncio.create_task(similarity_engine.compute_jaccard(input_genes, lower_bound))
+        similarity_engine = GenericSimilarity.get_similarity_engine(ontology, taxon)
+
+        similarity_engine.compute_jaccard_async(input_genes, lower_bound)
 
         compute_id = ComputationIdentifier(uuid=uuid)
 
@@ -87,46 +80,50 @@ def handle_get_jaccard_results(computation_id: str) -> Tuple[Any,int]:
 
     :rtype: Results
     """
-    if computation_id in _result_cache:
-        jaccard_task = _result_cache[computation_id]
-        # Need to check if the result is
-        # ready to return, then return it
-        if jaccard_task.done():
-            try:
-                result = jaccard_task.result()
-                """
-                # Similarity data returned in an array of dictionary objects
-                'input_id'
-                'input_symbol'
-                'hit_symbol'
-                'hit_id'
-                'score'
-                'shared_terms'
-                'shared_term_names'
-                """
-                computation_id = ComputationIdentifier(computation_id)
-                similarities = [
-                    Similarity(
-                        input_id=entry['input_id'],
-                        input_symbol=entry['input_symbol'],
-                        hit_symbol=entry['hit_symbol'],
-                        hit_id=entry['hit_id'],
-                        score=entry['score'],
-                        shared_terms=[x for x in entry['shared_terms']],
-                        shared_term_names=[x for x in entry['shared_term_names']]
-                    ) for entry in result
-                ]
-                results = Results(
-                    computation_id=computation_id,
-                    similarities=similarities
-                )
-                return results, 200
+    try:
+        """
+        # Similarity result data is returned in 
+        an array of dictionary objects with the following keys:
 
-            except CancelledError:
-                return "Computation cancelled - result not found", 404
-            except InvalidStateError:
-                return "Invalid computation state", 500
-        else:
-            return "The requested computation processing without error, but results are not yet available.", 102
-    else:
-        return "Not found", 404
+        'input_id'
+        'input_symbol'
+        'hit_symbol'
+        'hit_id'
+        'score'
+        'shared_terms'
+        'shared_term_names'
+        """
+
+        result = GenericSimilarity.get_jaccard_similarity_result(computation_id)
+
+        #  wrap the computation identifier again to echo it
+        computation_id = ComputationIdentifier(computation_id)
+
+        similarities = [
+            Similarity(
+                input_id=entry['input_id'],
+                input_symbol=entry['input_symbol'],
+                hit_symbol=entry['hit_symbol'],
+                hit_id=entry['hit_id'],
+                score=entry['score'],
+                shared_terms=[x for x in entry['shared_terms']],
+                shared_term_names=[x for x in entry['shared_term_names']]
+            ) for entry in result
+        ]
+
+        results = Results(
+            computation_id=computation_id,
+            similarities=similarities
+        )
+
+        return results, 200
+
+    except JaccardSimilarityPending:
+        return "The requested computation processing without error, but results are not yet available.", 102
+
+    except JaccardSimilarityResultNotFound:
+        return "Computation cancelled or not found - no result available", 404
+
+    except JaccardSimilarityComputationError:
+        return "Invalid computation state", 500
+
