# ncats/translator/ontology/server/openapi_server/model/computation_input.py
@@ -5,12 +5,11 @@ from datetime import date, datetime  # noqa: F401
 
 from typing import List, Dict  # noqa: F401
 
-from ncats.translator.ontology.server.openapi_server.model.base_model_ import Model
-from ncats.translator.ontology.server.openapi_server.model.gene_entry import GeneEntry
-from ncats.translator.ontology.server.openapi_server import util
+from openapi_server.model.base_model_ import Model
+from openapi_server.model.gene_entry import GeneEntry
+from openapi_server import util
 
-from ncats.translator.ontology.server.openapi_server.model.gene_entry import GeneEntry  # noqa: E501
-
+from openapi_server.model.gene_entry import GeneEntry  # noqa: E501
 
 class ComputationInput(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -18,30 +17,35 @@ class ComputationInput(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, ontology=None, taxon=None, input_genes=None):  # noqa: E501
+    def __init__(self, ontology=None, taxon=None, lower_bound=None, input_genes=None):  # noqa: E501
         """ComputationInput - a model defined in OpenAPI
 
         :param ontology: The ontology of this ComputationInput.  # noqa: E501
         :type ontology: str
         :param taxon: The taxon of this ComputationInput.  # noqa: E501
         :type taxon: str
+        :param lower_bound: The lower_bound of this ComputationInput.  # noqa: E501
+        :type lower_bound: float
         :param input_genes: The input_genes of this ComputationInput.  # noqa: E501
         :type input_genes: List[GeneEntry]
         """
         self.openapi_types = {
             'ontology': str,
             'taxon': str,
+            'lower_bound': float,
             'input_genes': List[GeneEntry]
         }
 
         self.attribute_map = {
             'ontology': 'ontology',
             'taxon': 'taxon',
+            'lower_bound': 'lower_bound',
             'input_genes': 'input_genes'
         }
 
         self._ontology = ontology
         self._taxon = taxon
+        self._lower_bound = lower_bound
         self._input_genes = input_genes
 
     @classmethod
@@ -102,6 +106,29 @@ class ComputationInput(Model):
         """
 
         self._taxon = taxon
+
+    @property
+    def lower_bound(self):
+        """Gets the lower_bound of this ComputationInput.
+
+        Lower bound threshold of Jaccard Similarity scores for similarities returned   # noqa: E501
+
+        :return: The lower_bound of this ComputationInput.
+        :rtype: float
+        """
+        return self._lower_bound
+
+    @lower_bound.setter
+    def lower_bound(self, lower_bound):
+        """Sets the lower_bound of this ComputationInput.
+
+        Lower bound threshold of Jaccard Similarity scores for similarities returned   # noqa: E501
+
+        :param lower_bound: The lower_bound of this ComputationInput.
+        :type lower_bound: float
+        """
+
+        self._lower_bound = lower_bound
 
     @property
     def input_genes(self):
